--- a/index.html
+++ b/index.html
@@ -1,16 +1,4 @@
-<html lang="jp" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>森 哲輝のホームページ</title>
-  </head>
-  <body>
-    <h1>森 哲輝のホームページ</h1>
-<img src="te.jpg" alt="">
-<p>森 哲輝（もり てつき）</p>
-<p>生年月日 2008年 7月23日</p>
-<p>血液型 AB型</p>
-<p>住所 愛知県名古屋市中川区小本1丁目4‐3</p>
-<p>趣味 AV鑑賞</p>
-    <p>YouTubeチャンネル <a href=”https://youtube.com/channel/UCKWwboG1yIBeO0YnG6mPkAw” target=”_blank”>🌞Feき🌝</a>
-</body>
-</html>
+<title>アマゾンギフト券が届きました</title>
+<h3>アマゾンギフト券が送信されました</h3>
+<img src="ama.jpg" width="300">
+<p>※ランダムに送られて先着順なので先に使われている場合があるのでご了承ください。</p>
